# rust-wasm-example

./: Cargo.toml  README.md  index.html  index.js
src/: lib.rs
